--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./src/index.js",
-    "development": "node ./src/index.js"
+    "production": "node ./src/index.js"
 },
   "keywords": [],
   "author": "",
