--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/index.js",
-    "production": "node ./src/index.js"
+    "start": "nodemon ./src/index.js"
 },
   "keywords": [],
   "author": "",
