--- a/package.json
+++ b/package.json
@@ -5,22 +5,23 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./src/index.js"
-},
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cep-promise": "^4.4.0",
     "cloudinary": "^1.36.4",
     "cors": "^2.8.5",
     "eslint": "^8.39.0",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.0",
+    "nodemon": "^2.0.22",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
-    "nodemon": "^2.0.22",
     "sequelize": "^6.30.0"
   },
   "devDependencies": {
